amended wrong team name

--- a/_posts/2014-05-05-ten-it-teg.md
+++ b/_posts/2014-05-05-ten-it-teg.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title:  "Ten-It-Tag"
-team: Ten-It-Tag
+title:  "Ten-It-Eg"
+team: Ten-It-Eg
 date:   2014-05-05 18:26:22
 categories: projects
 image: assets/img/project-snapshots/ten_it_eg.jpg
-project_url: http://AmI-2014.github.io/Ten-It-Tag
+project_url: http://AmI-2014.github.io/Ten-It-Egg
 ---
 
 The purpose of this project is to help improve the efficiency of a computer lab by controlling the power of the workstations and the lights based on user inputs.
