update students' projects

--- a/_posts/2014-05-05-yaaig.md
+++ b/_posts/2014-05-05-yaaig.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Never be locked outside your apartment again!"
 team: YAAIG
 date:   2014-05-05 18:26:22
-categories: projects
+categories: completed-projects
 image: assets/img/project-snapshots/locked.jpg
 project_url: http://AmI-2014.github.io/YAAIG
 ---
@@ -13,4 +13,3 @@ The idea of the project consists in preventing the user from leaving the room fo
 When the user is leaving the room, the system can detect if he's not carrying some important object and warns him in multiple ways. It can also check presence of the objects when the user gets back in the room.
 
 The system can warn the user on ad-hoc devices or on smart devices such as smartphone or smart watches.
-
