--- a/_posts/2014-05-05-ten-it-teg.md
+++ b/_posts/2014-05-05-ten-it-teg.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Ten-It-Eg"
+title:  "Set App"
 team: Ten-It-Eg
 date:   2014-05-05 18:26:22
-categories: projects
+categories: completed-projects
 image: assets/img/project-snapshots/ten_it_eg.jpg
 project_url: http://AmI-2014.github.io/Ten-It-Eg
 ---
